--- a/provisioning/roles/nginx/templates/ssl.j2
+++ b/provisioning/roles/nginx/templates/ssl.j2
@@ -1,13 +1,14 @@
-ssl on;
 ssl_certificate /etc/ssl/ansible/mayurifag.ru.pem;
 ssl_certificate_key /etc/ssl/ansible/mayurifag.ru.key;
 
-ssl_protocols TLSv1.2;
-ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
-ssl_prefer_server_ciphers on;
-ssl_session_cache shared:SSL:10m;
-ssl_session_timeout 10m;
+# modern configuration
+ssl_protocols TLSv1.3;
+ssl_prefer_server_ciphers off;
+
+ssl_session_timeout 1d;
+ssl_session_cache shared:MozSSL:10m;  # about 40000 sessions
 ssl_session_tickets off;
+
 ssl_stapling on;
 ssl_stapling_verify on;
 ssl_dhparam /etc/ssl/dhparams.pem;
