--- a/provisioning/roles/nginx/templates/ssl.j2
+++ b/provisioning/roles/nginx/templates/ssl.j2
@@ -1,8 +1,9 @@
 ssl_certificate /etc/ssl/ansible/mayurifag.ru.pem;
 ssl_certificate_key /etc/ssl/ansible/mayurifag.ru.key;
 
-# modern configuration
-ssl_protocols TLSv1.3;
+# intermediate configuration
+ssl_protocols TLSv1.2 TLSv1.3;
+ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
 ssl_prefer_server_ciphers off;
 
 ssl_session_timeout 1d;
@@ -11,4 +12,5 @@ ssl_session_tickets off;
 
 ssl_stapling on;
 ssl_stapling_verify on;
+
 ssl_dhparam /etc/ssl/dhparams.pem;
