--- a/provisioning/roles/nextcloud/templates/nextcloud.conf.j2
+++ b/provisioning/roles/nextcloud/templates/nextcloud.conf.j2
@@ -1,7 +1,7 @@
 server {
   listen 443 ssl http2;
 
-  server_name nextcloud.mayurifag.ru;
+  server_name nextcloud.mayurifag.local;
 
   include extra/ssl;
 
