--- a/provisioning/roles/nginx/templates/main.j2
+++ b/provisioning/roles/nginx/templates/main.j2
@@ -2,7 +2,7 @@ server {
     listen 443 default_server;
     listen [::]:443 default_server ipv6only=on;
 
-    server_name _ ;
+    server_name _;
 
     include extra/ssl;
     include extra/security;
@@ -13,4 +13,5 @@ server {
     }
 }
 
+# TODO: maybe move to another conf.d idk its not needed here
 include extra/redirect_to_https;
