Add basic auth for netdata

--- a/provisioning/roles/netdata/templates/netdata.conf.j2
+++ b/provisioning/roles/netdata/templates/netdata.conf.j2
@@ -11,6 +11,7 @@ server {
 
   include extra/ssl;
   include extra/security;
+  include extra/global_auth;
 
   location / {
       proxy_set_header X-Forwarded-Host $host;
