--- a/provisioning/roles/shadowsocks/templates/config.json.j2
+++ b/provisioning/roles/shadowsocks/templates/config.json.j2
@@ -3,7 +3,7 @@
     "mode": "tcp_and_udp",
     "reuse_port": true,
     "server_port": 8888,
-    "password":"{{ shadowsocks.password }}",
+    "password":"{{ shadowsocks_password }}",
     "timeout":60,
     "method":"xchacha20-ietf-poly1305",
     "fast_open": true,
