--- a/provisioning/roles/dovecot/templates/mail-users.sql.j2
+++ b/provisioning/roles/dovecot/templates/mail-users.sql.j2
@@ -1,16 +1,17 @@
 {% for domain in maildb.domains %}
-DELETE FROM `{{ maildb.database }}`.`virtual_domains` WHERE `name` = '{{ domain.name }}';
-INSERT INTO `{{ maildb.database }}`.`virtual_domains` (`name`) VALUES ('{{ domain.name  }}');
+DELETE FROM `maildatabase`.`virtual_domains` WHERE `name` = '{{ domain.name }}';
+INSERT INTO `maildatabase`.`virtual_domains` (`name`) VALUES ('{{ domain.name  }}');
 SET @domain_id = LAST_INSERT_ID();
 
 {% for user in domain.users %}
-DELETE FROM `{{ maildb.database }}`.`virtual_users` WHERE `email` = '{{ user.email }}';
-INSERT INTO `{{ maildb.database }}`.`virtual_users` (`domain_id`, `password` , `email`) VALUES (@domain_id, '#{{ user.email }}#PASSWORD#', '{{ user.email }}');
+DELETE FROM `maildatabase`.`virtual_users` WHERE `email` = '{{ user.email }}';
+{# user.email#password used by passwords-inserter script #}
+INSERT INTO `maildatabase`.`virtual_users` (`domain_id`, `password` , `email`) VALUES (@domain_id, '#{{ user.email }}#PASSWORD#', '{{ user.email }}');
 {% endfor %}
 
 {% for alias in domain.aliases %}
-DELETE FROM `{{ maildb.database }}`.`virtual_aliases` WHERE `source` = '{{ alias.from }}' AND `destination` = '{{ alias.to }}' AND `domain_id` = @domain_id;
-INSERT INTO `{{ maildb.database }}`.`virtual_aliases` (`domain_id`, `source`, `destination`) VALUES (@domain_id, '{{ alias.from }}', '{{ alias.to }}');
+DELETE FROM `maildatabase`.`virtual_aliases` WHERE `source` = '{{ alias.from }}' AND `destination` = '{{ alias.to }}' AND `domain_id` = @domain_id;
+INSERT INTO `maildatabase`.`virtual_aliases` (`domain_id`, `source`, `destination`) VALUES (@domain_id, '{{ alias.from }}', '{{ alias.to }}');
 {% endfor %}
 
 {% endfor %}
