--- a/provisioning/roles/nginx/templates/main.j2
+++ b/provisioning/roles/nginx/templates/main.j2
@@ -1,5 +1,5 @@
 server {
-    listen 443 default_server;
+    listen 443 ssl http2 default_server;
     listen [::]:443 default_server ipv6only=on;
 
     server_name _;
