--- a/provisioning/roles/wireguard/templates/etc/wireguard/wg0.conf.j2
+++ b/provisioning/roles/wireguard/templates/etc/wireguard/wg0.conf.j2
@@ -1,6 +1,8 @@
 [Interface]
 Address = {{ vpn_network }}.1/24
 SaveConfig = true
+PostUp = iptables -A FORWARD -i wg0 -j ACCEPT; iptables -t nat -A POSTROUTING -o {{ ansible_default_ipv4.interface }} -j MASQUERADE; ip6tables -A FORWARD -i wg0 -j ACCEPT; ip6tables -t nat -A POSTROUTING -o {{ ansible_default_ipv4.interface }} -j MASQUERADE
+PostDown = iptables -D FORWARD -i wg0 -j ACCEPT; iptables -t nat -D POSTROUTING -o {{ ansible_default_ipv4.interface }} -j MASQUERADE; ip6tables -D FORWARD -i wg0 -j ACCEPT; ip6tables -t nat -D POSTROUTING -o {{ ansible_default_ipv4.interface }} -j MASQUERADE
 ListenPort = {{ vpn_port }}
 PrivateKey = {{ private_key_files.results[0].stdout }}
 
