--- a/provisioning/roles/shadowsocks/templates/config.json.j2
+++ b/provisioning/roles/shadowsocks/templates/config.json.j2
@@ -1,12 +1,12 @@
 {
     "server":"0.0.0.0",
-    "mode": "tcp_and_udp",
-    "reuse_port": true,
     "server_port": 8888,
     "password":"{{ shadowsocks_password }}",
     "timeout":60,
-    "method":"xchacha20-ietf-poly1305",
-    "fast_open": true,
+    "method":"chacha20",
     "plugin":"/etc/shadowsocks-libev/v2ray-plugin",
-    "plugin_opts":"server",
+    "plugin_opts":"server;host=cloudfront.com",
+    "nameserver":"1.1.1.1",
+    "mode":"tcp_only",
+    "fast_open":true
 }
