--- a/provisioning/roles/nginx/templates/security.j2
+++ b/provisioning/roles/nginx/templates/security.j2
@@ -1,7 +1,7 @@
 add_header X-Frame-Options "SAMEORIGIN";
 add_header X-Content-Type-Options nosniff;
 add_header X-XSS-Protection "1; mode=block";
-add_header Strict-Transport-Security "max-age=300; includeSubDomains; preload";
+add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload";
 add_header Content-Security-Policy "default-src 'self'; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'";
 fastcgi_hide_header X-Frame-Options;
 fastcgi_hide_header X-Content-Type-Options;
