--- a/roles/traefik/templates/traefik.toml.j2
+++ b/roles/traefik/templates/traefik.toml.j2
@@ -1,48 +1,47 @@
+{% if disable_tls is not defined %}
+defaultEntryPoints = ["http", "https"]
+{% endif %}
 [entryPoints]
   [entryPoints.web]
     address = ":80"
-  {% if server_hostname != "mayurifag.local" %}
+    {% if disable_tls is not defined %}
     [entryPoints.web.http.redirections.entryPoint]
       to = "websecure"
-
+      scheme = "https"
     [entryPoints.websecure]
-      address = ":{{ traefik_port_https }}"
-
-        [entryPoints.websecure.http.tls]
-          certResolver = "letsencrypt"
-
-          [entryPoints.websecure.http.tls.domains]
-            main = "{{ server_hostname }}"
-            sans = [
-              "*.{{ server_hostname }}"
-            ]
-  {% endif %}
-
-  [entryPoints.traefik]
-    address = ":{{ traefik_port_ui }}"
+      address = ":443"
+      [entryPoints.websecure.http.tls]
+        certResolver = "letsencrypt"
+        [entryPoints.websecure.http.tls.domains]
+          main = "{{ server_hostname }}"
+          sans = [
+            "*.{{ server_hostname }}"
+          ]
+    {% endif %}
 
 [providers]
-  providersThrottleDuration = "2s"
   [providers.docker]
     exposedbydefault = false
-
-[api]
-  insecure = true
-  dashboard = true
-
+  [providers.file]
+    filename = "/etc/traefik/traefik_dynamic.toml"
+    watch = true
 [log]
   level = "{{ traefik_log_level }}"
+[global]
+  sendAnonymousUsage = false
+[api]
+  dashboard = true
+  insecure = false
 
-[ping]
-  terminatingStatusCode = 0
-{% if server_hostname != "mayurifag.local" %}
-  [certificatesResolvers]
-    [certificatesResolvers.letsencrypt]
-      [certificatesResolvers.letsencrypt.acme]
-        email = "{{ admin_email }}"
-        storage = "/letsencrypt/acme.json"
-        caserver = "{{ traefik_acme_server }}"
+{% if disable_tls is not defined %}
+[certificatesResolvers]
+  [certificatesResolvers.letsencrypt]
+    [certificatesResolvers.letsencrypt.acme]
+      email = "{{ admin_email }}"
+      storage = "/letsencrypt/acme.json"
+      caserver = "{{ traefik_acme_server }}"
 
-        [certificatesResolvers.letsencrypt.acme.dnsChallenge]
-          provider = "{{ traefik_dns_provider }}"
+      [certificatesResolvers.letsencrypt.acme.dnsChallenge]
+        provider = "{{ traefik_dns_provider }}"
+        resolvers = ["1.1.1.1:53", "8.8.8.8:53"]
 {% endif %}
