Add traefik dashboard endpoint

--- a/roles/traefik/templates/traefik_dynamic.toml.j2
+++ b/roles/traefik/templates/traefik_dynamic.toml.j2
@@ -3,3 +3,8 @@
   users = [
     "{{ base_auth_credentials }}"
   ]
+
+[http.routers.traefik-dashboard]
+  rule = "Host(`{{ traefik_subdomain }}.{{ server_hostname }}`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))"
+  service = "api@internal"
+  middlewares = "auth@file"
