--- a/roles/traefik/templates/dynamic_configs/traefik_dashboard.toml.j2
+++ b/roles/traefik/templates/dynamic_configs/traefik_dashboard.toml.j2
@@ -1,4 +1,4 @@
 [http.routers.traefik-dashboard]
   rule = "Host(`{{ traefik_subdomain }}.{{ server_hostname }}`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))"
   service = "api@internal"
-  middlewares = "auth@file"
+  middlewares = "auth@file,my-headers@file"
