Make HTTPS TLS actually working :tada:

--- a/roles/traefik/templates/dynamic_configs/secure_headers.toml.j2
+++ b/roles/traefik/templates/dynamic_configs/secure_headers.toml.j2
@@ -24,6 +24,19 @@ featurePolicy = "camera 'none'; geolocation 'none'; microphone 'none'; payment '
   [http.middlewares.my-headers.headers.customResponseHeaders]
   X-Robots-Tag = "none,noarchive,nosnippet,notranslate,noimageindex,"
   server = ""
+
+[tls.options.default]
+minVersion = "VersionTLS12"
+sniStrict = true
+cipherSuites = [
+  "TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256",
+  "TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384",
+  "TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305",
+  "TLS_AES_128_GCM_SHA256",
+  "TLS_AES_256_GCM_SHA384",
+  "TLS_CHACHA20_POLY1305_SHA256"
+]
+curvePreferences = [ "CurveP521", "CurveP384" ]
 {% else %}
 [http.middlewares.my-headers.headers]
   [http.middlewares.my-headers.headers.customResponseHeaders]
