--- a/roles/traefik/templates/traefik.toml.j2
+++ b/roles/traefik/templates/traefik.toml.j2
@@ -12,30 +12,8 @@ defaultEntryPoints = ["http", "https"]
       address = ":443"
       [entryPoints.websecure.http.tls]
         certResolver = "letsencrypt"
-        [entryPoints.websecure.http.tls.domains]
-          main = "{{ server_hostname }}"
-          sans = [
-            "*.{{ server_hostname }}"
-          ]
-        [entryPoints.websecure.http.tls.options.default]
-          minVersion = "VersionTLS12"
-          sniStrict = true
-          {#
-            "TLS_ECDHE_RSA_WITH_AES_128_CBC_SHA256",
-            "TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384",
-            "TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305",
-          #}
-          cipherSuites = [
-            "TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256",
-            "TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384",
-            "TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305",
-            "TLS_AES_128_GCM_SHA256",
-            "TLS_AES_256_GCM_SHA384",
-            "TLS_CHACHA20_POLY1305_SHA256"
-          ]
-
-          curvePreferences = [ "CurveP521", "CurveP384" ]
-    {% endif %}
+        options = "default"
+{% endif %}
 [providers]
   [providers.docker]
     exposedbydefault = false
