--- a/roles/traefik/templates/dynamic_configs/traefik_dashboard.toml.j2
+++ b/roles/traefik/templates/dynamic_configs/traefik_dashboard.toml.j2
@@ -2,3 +2,8 @@
   rule = "Host(`{{ traefik_subdomain }}.{{ server_hostname }}`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))"
   service = "api@internal"
   middlewares = "auth@file,my-headers@file"
+{% if enable_tls == true %}
+  [http.routers.traefik-dashboard.tls.domains]
+    main = "{{ server_hostname }}"
+    sans = ["*.{{ server_hostname }}"]
+{% endif%}
