Fix shadowsocks cyphers to be xchacha20-ietf-poly1305

--- a/roles/shadowsocks/templates/config.json.j2
+++ b/roles/shadowsocks/templates/config.json.j2
@@ -3,7 +3,7 @@
     "server_port": 8888,
     "password":"{{ shadowsocks_password }}",
     "timeout":60,
-    "method":"chacha20-ietf-poly1305",
+    "method":"xchacha20-ietf-poly1305",
     "plugin":"/etc/shadowsocks-libev/v2ray-plugin",
     "plugin_opts":"server;host=cloudfront.com",
     "nameserver":"1.1.1.1",
