--- a/roles/homer/templates/config.yml.j2
+++ b/roles/homer/templates/config.yml.j2
@@ -61,11 +61,11 @@ services:
         subtitle: "Auth need to configure"
         url: "http://{{ nextcloud_subdomain }}.{{ server_hostname }}"
 {% endif %}
-{% if seafile_enabled == true %}
-      - name: "Seafile"
+{% if filerun_enabled == true %}
+      - name: "Filerun"
         icon: "fas fa-cloud"
         subtitle: "Auth need to configure"
-        url: "http://{{ seafile_subdomain }}.{{ server_hostname }}"
+        url: "http://{{ filerun_subdomain }}.{{ server_hostname }}"
 {% endif %}
 {% if portainer_enabled == true %}
       - name: "Portainer"
