Add Blocky lists

--- a/roles/blocky/templates/config.yaml.j2
+++ b/roles/blocky/templates/config.yaml.j2
@@ -10,9 +10,37 @@ blocking:
   blackLists:
     ads:
       - https://raw.githubusercontent.com/StevenBlack/hosts/master/hosts
+      - https://adaway.org/hosts.txt
+      - https://v.firebog.net/hosts/AdguardDNS.txt
+      - https://v.firebog.net/hosts/Admiral.txt
+      - https://raw.githubusercontent.com/anudeepND/blacklist/master/adservers.txt
+      - https://s3.amazonaws.com/lists.disconnect.me/simple_ad.txt
+      - https://v.firebog.net/hosts/Easylist.txt
+      - https://pgl.yoyo.org/adservers/serverlist.php?hostformat=hosts&showintro=0&mimetype=plaintext
+      - https://raw.githubusercontent.com/FadeMind/hosts.extras/master/UncheckyAds/hosts
+      - https://raw.githubusercontent.com/bigdargon/hostsVN/master/hosts
+    tracking:
+      - https://v.firebog.net/hosts/Easyprivacy.txt
+      - https://v.firebog.net/hosts/Prigent-Ads.txt
+      - https://raw.githubusercontent.com/FadeMind/hosts.extras/master/add.2o7Net/hosts
+      - https://raw.githubusercontent.com/crazy-max/WindowsSpyBlocker/master/data/hosts/spy.txt
+      - https://hostfiles.frogeye.fr/firstparty-trackers-hosts.txt
+    malware:
+      - https://raw.githubusercontent.com/Spam404/lists/master/main-blacklist.txt
+    suspicious:
+      - https://raw.githubusercontent.com/FadeMind/hosts.extras/master/add.Spam/hosts
+    crypto:
+      - https://zerodot1.gitlab.io/CoinBlockerLists/hosts_browser
+  whiteLists:
+    ads:
+      - https://raw.githubusercontent.com/anudeepND/whitelist/master/domains/whitelist.txt
   clientGroupsBlock:
     default:
       - ads
+      - suspicious
+      - tracking
+      - malware
+      - crypto
 
 ports:
   dns: 53
