Remove traefik dashboard

--- a/roles/traefik/templates/traefik.toml.j2
+++ b/roles/traefik/templates/traefik.toml.j2
@@ -25,7 +25,7 @@ defaultEntryPoints = ["http", "https"]
 [global]
   sendAnonymousUsage = false
 [api]
-  dashboard = true
+  dashboard = false
   insecure = false
 
 {% if enable_tls == true %}
