--- a/roles/traefik/templates/dynamic_configs/my-headers.toml.j2
+++ b/roles/traefik/templates/dynamic_configs/my-headers.toml.j2
@@ -1,12 +1,12 @@
 {% if enable_tls == true %}
 [http.middlewares.my-headers.headers]
-sslRedirect = true
-stsSeconds = 31536000
-stsIncludeSubdomains = true
-stsPreload = true
-forceSTSHeader = true
-contentTypeNosniff = true
-browserXssFilter = true
+  {# sslRedirect = true #}
+  stsSeconds = 31536000
+  stsIncludeSubdomains = true
+  stsPreload = true
+  forceSTSHeader = true
+  contentTypeNosniff = true
+  browserXssFilter = true
 
 [tls.options.default]
 minVersion = "VersionTLS12"
@@ -20,6 +20,6 @@ cipherSuites = [
 curvePreferences = [ "CurveP521", "CurveP384" ]
 {% else %}
 [http.middlewares.my-headers.headers]
-  [http.middlewares.my-headers.headers.customResponseHeaders]
-  X-Custom-Response-Header = "fuck"
+[http.middlewares.my-headers.headers.customResponseHeaders]
+X-Custom-Response-Header = "fuck"
 {% endif %}
