--- a/roles/traefik/templates/dynamic_configs/secure-headers.toml.j2
+++ b/roles/traefik/templates/dynamic_configs/secure-headers.toml.j2
@@ -9,11 +9,15 @@ browserXssFilter = true
 referrerPolicy = "no-referrer"
 
 [tls.options.default]
-minVersion = "VersionTLS13"
+minVersion = "VersionTLS12"
 sniStrict = true
 cipherSuites = [
-  "TLS_AES_256_GCM_SHA384",
-  "TLS_AES_128_GCM_SHA256"
+  "TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384",
+  "TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384",
+  "TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256",
+  "TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256",
+  "TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305",
+  "TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305"
 ]
 curvePreferences = [ "CurveP521", "CurveP384" ]
 {% endif %}
