--- a/roles/blocky/templates/config.yaml.j2
+++ b/roles/blocky/templates/config.yaml.j2
@@ -1,13 +1,17 @@
 upstreams:
+  init:
+    strategy: fast
   groups:
     default:
-      - 81.169.136.222
-      - 172.104.242.111
-      - 217.160.70.42
+      - 195.10.195.195
+      - 194.36.144.87
+      - 37.252.191.197
+      - 94.247.43.254
   timeout: 2s
+  strategy: parallel_best
 
 blocking:
-  blackLists:
+  denylists:
     ads:
       - https://raw.githubusercontent.com/StevenBlack/hosts/master/hosts
       - https://adaway.org/hosts.txt
@@ -27,7 +31,7 @@ blocking:
       - https://raw.githubusercontent.com/Spam404/lists/master/main-blacklist.txt
     suspicious:
       - https://raw.githubusercontent.com/FadeMind/hosts.extras/master/add.Spam/hosts
-  whiteLists:
+  allowlists:
     ads:
       - https://raw.githubusercontent.com/anudeepND/whitelist/master/domains/whitelist.txt
   clientGroupsBlock:
@@ -37,8 +41,8 @@ blocking:
       - tracking
       - malware
 
+{# dns: 53 #}
 ports:
-  dns: 53
   http: 4000
   tls: 853
 
@@ -53,5 +57,3 @@ caching:
 
 queryLog:
   logRetentionDays: 1
-
-bootstrapDns: tcp+udp:1.1.1.1
