--- a/roles/traefik/templates/traefik.toml.j2
+++ b/roles/traefik/templates/traefik.toml.j2
@@ -1,6 +1,3 @@
-{% if enable_tls == true %}
-defaultEntryPoints = ["web", "websecure"]
-{% endif %}
 [entryPoints]
   [entryPoints.web]
     address = ":80"
@@ -47,6 +44,7 @@ defaultEntryPoints = ["web", "websecure"]
         provider = "{{ traefik_dns_provider }}"
         resolvers = ["1.1.1.1:53", "8.8.8.8:53"]
 
+{# Not sure if I need it #}
 [serversTransport]
   insecureSkipVerify = true
 {% endif %}
