refactor(traefik): remove unused blocky configuration
Removed outdated and unused Traefik configuration for Blocky, simplifying the codebase and reducing potential confusion.

- Deleted the `alpn-dot-for-blocky.toml.j2` template as it was no longer needed.
- Commented out specific Traefik labels in `roles/blocky/tasks/main.yml` that were either redundant or superseded by other configurations.
- Removed the `renovate.json` file as it was empty and likely a remnant of previous configuration.

--- a/roles/crowdsec/templates/whitelist.yaml.j2
+++ b/roles/crowdsec/templates/whitelist.yaml.j2
@@ -1,3 +1,10 @@
+---
+{#
+TODO: make better whitelist or wait for collection
+
+Problem right now is WebDAV generating a lot of 403 errors and crowdsec false
+positives that. Actually, thats opencloud's problem I think
+#}
 name: custom-whitelist/opencloud-whitelist
 description: "Whitelist events related to Opencloud server"
 whitelist:
