--- a/roles/traefik/templates/traefik.toml.j2
+++ b/roles/traefik/templates/traefik.toml.j2
@@ -18,6 +18,7 @@
 [providers]
   [providers.docker]
     exposedbydefault = false
+    network = "web"
   [providers.file]
     directory = "/etc/traefik/dynamic_configs"
     watch = true
